<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:text="@string/about_IBHERT_1_1"
        android:id="@+id/about_us_1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/image1"
        android:layout_below="@+id/about_us_1_1"
        android:src="@drawable/ibhertcycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/about_us_1_2"
        android:layout_below="@+id/image1"
        android:text="@string/about_IBHERT_1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:src="@drawable/setsrepresentation"
        android:layout_below="@+id/about_us_1_2"
        android:id="@+id/image2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/about_IBHERT_1_3"
        android:layout_below="@+id/image2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>