<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/projects_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/projects_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Purpose of current project"
            android:fontFamily="@font/alegreya_sc_bold_italic"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/projects1_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects_title1"
            android:lineSpacingExtra="4dp"
            android:text="@string/projects1_txt1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryTextDefaultMaterialLight" />


        <ImageView
            android:id="@+id/projects_image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects1_txt1"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/purposeofproject1" />

        <TextView
            android:id="@+id/projects1_txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects_image1"
            android:lineSpacingExtra="4dp"
            android:text="@string/projects1_txt2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/projects_image2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects1_txt2"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/purposeofproject2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/projects_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sc_bold_italic"
            android:text="Program components"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projects2_txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects_title2"
            android:lineSpacingExtra="4dp"
            android:text="@string/projects2_txt1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryTextDefaultMaterialLight" />

        <ImageView
            android:id="@+id/projects2_image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects2_txt1"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/component" />



        <TextView
            android:id="@+id/projects2_txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects2_image1"
            android:lineSpacingExtra="4dp"
            android:text="@string/projects2_txt2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryTextDefaultMaterialLight" />

        <ImageView
            android:id="@+id/projects2_image2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects2_txt2"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/odulogo" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/projects_title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sc_bold_italic"
            android:text="Create a Login and Stay Up to Date on IBH Program Happenings"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projects3_txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:text="@string/projects3_txt1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryTextDefaultMaterialLight" />

        <LinearLayout
            android:id="@+id/layout_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/projects_txt1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/projects3_image1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/projects_title1"
                android:layout_weight="1"
                android:cropToPadding="true"
                android:padding="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/stayconnected" />


        </LinearLayout>

        <TextView
            android:id="@+id/projects3_txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:text="@string/projects3_txt2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryTextDefaultMaterialLight" />

    </LinearLayout>
</RelativeLayout>